Refactor private api to have an arbitrary list of addons on a cluster
