# internal/dinosaur/pkg/api/private/api/openapi.yaml
@@ -345,14 +345,22 @@ components:
     DataPlaneClusterUpdateStatusRequest:
       description: Schema for the request to update a data plane cluster's status
       example:
-        fleetshardAddonStatus:
-          packageImage: packageImage
+        addons:
+        - packageImage: packageImage
+          name: name
+          parametersSHA256Sum: parametersSHA256Sum
+          sourceImage: sourceImage
+          version: version
+        - packageImage: packageImage
+          name: name
           parametersSHA256Sum: parametersSHA256Sum
           sourceImage: sourceImage
           version: version
       properties:
-        fleetshardAddonStatus:
-          $ref: '#/components/schemas/DataPlaneClusterUpdateStatusRequest_fleetshardAddonStatus'
+        addons:
+          items:
+            $ref: '#/components/schemas/DataPlaneClusterUpdateStatusRequest_addons'
+          type: array
       type: object
     DataPlaneCentralStatus:
       description: Schema of the status object for a Central
@@ -507,13 +515,16 @@ components:
           type: array
         rhacs_operators:
           $ref: '#/components/schemas/RHACSOperatorConfigs'
-    DataPlaneClusterUpdateStatusRequest_fleetshardAddonStatus:
+    DataPlaneClusterUpdateStatusRequest_addons:
       example:
         packageImage: packageImage
+        name: name
         parametersSHA256Sum: parametersSHA256Sum
         sourceImage: sourceImage
         version: version
       properties:
+        name:
+          type: string
         version:
           type: string
         sourceImage:
