# internal/dinosaur/pkg/api/private/model_data_plane_cluster_update_status_request_addons.go
@@ -10,8 +10,9 @@
 // Code generated by OpenAPI Generator (https://openapi-generator.tech). DO NOT EDIT.
 package private
 
-// DataPlaneClusterUpdateStatusRequestFleetshardAddonStatus struct for DataPlaneClusterUpdateStatusRequestFleetshardAddonStatus
-type DataPlaneClusterUpdateStatusRequestFleetshardAddonStatus struct {
+// DataPlaneClusterUpdateStatusRequestAddons struct for DataPlaneClusterUpdateStatusRequestAddons
+type DataPlaneClusterUpdateStatusRequestAddons struct {
+	Name                string `json:"name,omitempty"`
 	Version             string `json:"version,omitempty"`
 	SourceImage         string `json:"sourceImage,omitempty"`
 	PackageImage        string `json:"packageImage,omitempty"`
